@startuml characters

class Sorter{

}
class BubbleSorter{

}
class Geezer{

}
class Sorter{
    
}

class Line{

}

interface Linable{

}
class Gourd {

}

class Position{
    setPosition();
    getPosition();
    getValue();
}
Linable --o Position --o Line   
'组合 or 聚合
Guord ..|>Linable 
'实现

class Being{
    String name
    getName()
    speak()
    speakTo()
    listen()
}

BubbleSorter--|> Sorter
Weapon --o Creature

@enduml